--- a/html/index.html
+++ b/html/index.html
@@ -16,8 +16,11 @@
     <form action="" method = "post">
         <input type = "text" class = "form-control" name = "email" id = "email" placeholder="Введите почту"><br>
         <input type = "text" class = "form-control" name = "login" id = "login" placeholder="Введите логин"><br>
-        <input type = "text" class = "form-control" name = "password" id = "password" placeholder="Введите пароль"><br>
-        <button class = "btn btn-success">Регистрация</button>
+        <input type = "password" class = "form-control" name = "password" id = "password" placeholder="Введите пароль"><br>
+        <button class = "btn btn-success" type = "submit">Авторизоваться</button>
+        <p>
+            Нет аккаунта ? -<a href = "#"> Регистрация</a>
+        </p>
     </form>
 </body>
 
